# Extrator-e-Analisador-de-arquivos-Excel

./: .gitignore  CI_CD.sh  LISTA_REVENDAS.xlsx  Makefile  functionsGui.py  guiEll.py  mkdocs.yml  pyproject.toml  requirements.txt  utils.py
Anality/: handlerExcel.py  main.py
Scrap/: site_web.py  web.py
docs/: index.md
src/: functionsGui.py  gui.py  guiEll.py  report.xml  utils.py
src/Anality/: handlerExcel.py  main.py
src/Scrap/: main.py  site_web.py  web.py
src/views/: index.html  scripts.js  styles.css
tests/: test_analyse.py
views/: index.html  styles.css
