[tool.poetry]
name = "Gerenciador de Documentos"
version = "0.5.0"
description = "Projeto para programa de extração e análise de documentos excel para a simpress"
authors = ["edno almeida"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
